<resources>

    <string name="app_name">TDApp</string>
    <string name="complete_str">Complete?</string>
    <string name="task_title_str">Task</string>
    <string name="priority_str">Priority</string>
    <string name="days_left_str"># of Days Left</string>
    <string name="add_button_str">Add Task</string>
    <string name="due_date_edit_str">Due Date</string>
    <string name="due_date_button_str">Choose Due Date</string>
    <string name="priority_edit_str">Priority</string>
    <string name="description_edit_str">Tasks Description</string>
    <string name="task_title_edit_str">Task Title</string>
    <string name="done_button_str">Done</string>
    <string name="cancel_button_str">Cancel</string>
    <string name="sort_by_date_str">Sort by Date</string>
    <string name="sort_by_priority_str">Sort by Priority</string>

</resources>