<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background-yellow" >

    <RelativeLayout
        android:id="@+id/inner_box"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:background="@color/black"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/header_box"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/is_complete"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/complete_str" 
                android:gravity="center"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_width="170dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/task_title_str" 
                android:gravity="center"/>

            <TextView
                android:id="@+id/priority"
                android:layout_width="50dp"
                android:layout_height="fill_parent" 
                android:text="@string/priority_str"
                android:gravity="center"/>

            <TextView
                android:id="@+id/days_left"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:text="@string/days_left_str"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_box"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/header_box" >

            <ListView
                android:id="@+id/task_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </ListView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>